packages/core/scss/components/list/_layout.scss
@use "./_variables.scss" as *;
@use "../icons/_variables.scss" as *;
@use "sass:map";

@mixin kendo-list--layout-base() {

    // List container
    .k-list-container {
        display: flex;
        flex-flow: column nowrap;

        > .k-list {
            flex: 1;
            height: 100%;
        }
    }

    // List
    .k-list {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        border-radius: inherit;
        font-family: $kendo-list-font-family;
        font-size: $kendo-list-font-size;
        line-height: $kendo-list-line-height;
        display: flex;
        flex-flow: column nowrap;
        outline: none;
        position: relative;
        overflow: hidden;

        *,
        *::before,
        *::after {
            box-sizing: border-box;
        }
    }


    // List in popup
    .k-popup > .k-list {
        height: 100%;
        border-width: 0;
    }


    // List header
    // .k-list-header,
    .k-list-group-sticky-header {
        padding-block: $kendo-list-md-header-padding-y;
        padding-inline: $kendo-list-md-header-padding-x;
        border-width: 0;
        border-width: $kendo-list-header-border-width;
        border-style: solid;
        font-size: $kendo-list-header-font-size;
        line-height: $kendo-list-header-line-height;
        font-weight: $kendo-list-header-font-weight;
        white-space: nowrap;
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        flex: none;
        overflow: hidden;
        text-overflow: ellipsis;
        cursor: pointer;
    }


    // List content
    .k-list-content {
        border-color: inherit;
        flex: 1 1 auto;
        overflow: hidden;
        overflow-y: auto;
        position: relative;
    }


    // List UL
    .k-list-ul {
        margin: 0;
        padding: 0;
        border-width: 0;
        border-color: inherit;
        height: auto;
        list-style: none;
    }


    // List item
    .k-list-item {
        padding-block: $kendo-list-md-item-padding-y;
        padding-inline: $kendo-list-md-item-padding-x;
        border: 0;
        font-size: $kendo-list-item-font-size;
        line-height: $kendo-list-item-line-height;
        outline: none;
        cursor: pointer;
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        align-content: center;
        gap: $kendo-icon-spacing;
        position: relative;
        transition-property: color, background-color, outline-color, box-shadow;
        transition-duration: 200ms;
        transition-timing-function: ease;

        &.k-first::before {
            content: "";
            border-width: 1px 0 0;
            border-style: solid;
            position: absolute;
            inset-block-start: 0;
            inset-inline-start: 0;
            inset-inline-end: 0;
        }
    }
    .k-list-item-text,
    .k-list-header-text,
    .k-list-optionlabel {
        &::before {
            content: "\200b";
            width: 0px;
            overflow: hidden;
        }
    }
    .k-list-optionlabel {
        @extend .k-list-item !optional;
        column-gap: 0;
    }

    .k-list-custom-value {
        @extend .k-list-item !optional;
        font-style: italic;
        position: sticky;
    }


    // List group item
    .k-list-group-item {
        padding-block: $kendo-list-md-group-item-padding-y;
        padding-inline: $kendo-list-md-group-item-padding-x;
        border-width: 0;
        border-width: $kendo-list-group-item-border-width;
        border-style: solid;
        font-size: $kendo-list-group-item-font-size;
        line-height: $kendo-list-group-item-line-height;
        font-weight: $kendo-list-group-item-font-weight;
        cursor: default;
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        align-content: center;
        gap: $kendo-icon-spacing;
        position: relative;
    }


    // List item group label
    .k-list-item-group-label {
        position: absolute;
        inset-block-start: 0;
        inset-inline-end: 0;
    }


    // Virtualization
    .k-virtual-list {}
    .k-virtual-content,
    .k-virtual-list .k-list-content {
        overflow-y: scroll;
    }
    .k-virtual-list .k-list-item,
    .k-virtual-list .k-list-group-item,
    .k-virtual-content .k-list-item,
    .k-virtual-content .k-list-group-item {
        position: absolute;
        width: 100%;
    }
    .k-virtual-list .k-list-item-text,
    .k-virtual-list .k-list-header-text {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
    .k-virtual-list .k-list-optionlabel {
        position: relative;
    }


    // Filter
    .k-list-filter {
        display: block;
        position: relative;
        padding-inline: $kendo-list-md-filter-padding-x;
        padding-block: $kendo-list-md-filter-padding-y;
        box-sizing: border-box;
        flex: none;
    }


    // Switch sizes
    @each $size, $size-props in $kendo-list-sizes {
        $_font-size: map.get( $size-props, font-size );
        $_line-height: map.get( $size-props, line-height );
        $_font-size: map.get( $size-props, font-size );
        $_line-height: map.get( $size-props, line-height );
        $_header-padding-x: map.get( $size-props, header-padding-x );
        $_header-padding-y: map.get( $size-props, header-padding-y );
        $_header-font-size: map.get( $size-props, header-font-size );
        $_header-line-height: map.get( $size-props, header-line-height );
        $_item-padding-x: map.get( $size-props, item-padding-x );
        $_item-padding-y: map.get( $size-props, item-padding-y );
        $_item-font-size: map.get( $size-props, item-font-size );
        $_item-line-height: map.get( $size-props, item-line-height );
        $_group-item-padding-x: map.get( $size-props, group-item-padding-x );
        $_group-item-padding-y: map.get( $size-props, group-item-padding-y );
        $_group-item-font-size: map.get( $size-props, group-item-font-size );
        $_group-item-line-height: map.get( $size-props, group-item-line-height );
        $_group-label-padding-x: map.get( $size-props, item-group-label-padding-x );
        $_group-label-padding-y: map.get( $size-props, item-group-label-padding-y );
        $_group-label-font-size: map.get( $size-props, item-group-label-font-size );
        $_group-label-line-height: map.get( $size-props, item-group-label-line-height );
        $_filter-padding-x: map.get( $size-props, filter-padding-x );
        $_filter-padding-y: map.get( $size-props, filter-padding-y );

        .k-list-#{$size} {
            font-size: $_font-size;
            line-height: $_line-height;

            // .k-list-header,
            .k-list-group-sticky-header {
                padding-block: $_header-padding-y;
                padding-inline: $_header-padding-x;
                font-size: $_header-font-size;
                line-height: $_header-line-height;
            }

            .k-list-filter {
                padding-inline: $_filter-padding-x;
                padding-block: $_filter-padding-y;
            }

            .k-list-item {
                padding-block: $_item-padding-y;
                padding-inline: $_item-padding-x;
                font-size: $_item-font-size;
                line-height: $_item-line-height;
            }

            .k-list-group-item {
                padding-block: $_group-item-padding-y;
                padding-inline: $_group-item-padding-x;
                font-size: $_group-item-font-size;
                line-height: $_group-item-line-height;
            }

            .k-list-item-group-label {
                padding-block: $_group-label-padding-y;
                padding-inline: $_group-label-padding-x;
                font-size: $_group-label-font-size;
                line-height: $_group-label-line-height;
            }
        }
    }
}


@mixin kendo-list--layout() {
    @include kendo-list--layout-base();
}

